tests/passing/guard_division_by_zero.tails
func id(x: int) -> unit:
  pass

func tests() -> unit:
  discard id(1 / 0)
