tests/failing/parser_trailing_comma.tails
func foo(x: int) -> unit:
  pass

func tests() -> unit:
  foo(1,)

  pass
